
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int
memcmp(const void *s1, const void *s2, size_t n)
{
 if (n != 0) {
  const unsigned char *p1 = s1, *p2 = s2;

  do {
   if (*p1++ != *p2++)
    return (*--p1 - *--p2);
  } while (--n != 0);
 }
 return (0);
}
